# c4b-nbs-pipeline

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
c4b_nbs_pipeline/: __init__.py  cli.py
c4b_nbs_pipeline/ingestion/: __init__.py  base.py  lorawan.py  mqtt.py  sentinel.py
c4b_nbs_pipeline/processing/: __init__.py  cloud_mask.py  harmonise.py  indices.py
c4b_nbs_pipeline/sensors/: __init__.py  microclimate.py  soil.py  water_quality.py
c4b_nbs_pipeline/utils/: __init__.py  config.py  metadata.py
config/: pipeline.yaml
docs/: extending.md
examples/: wetland_monitoring.py
tests/: test_pipeline.py
